tests/fixtures/invalid/pow_float_list_dict.py
# Cannot call pow() with Float, List[int], Dict[str, int]
x = pow(1.0, [1, 2, 3], {"a": 1})
